--- a/Tarea/style.css
+++ b/Tarea/style.css
@@ -268,3 +268,11 @@ a {
 .feed-icons{
     display: flex;
 }
+
+.pagination{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
