--- a/Tarea/style.css
+++ b/Tarea/style.css
@@ -269,10 +269,6 @@ a {
     display: flex;
 }
 
-.pagination{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
+.seleccionado{
+    background-color: gray;
 }
